# ip-changed-telegram-message

./: .dockerignore  Cargo.toml  Dockerfile  README.md  install.sh  ip-changed-telegram-message.service  readme.md
.github/: dependabot.yml
.github/workflows/: container.yml  rust.yml
src/: http.rs  ips.rs  main.rs  notifier.rs
systemd/system/: service
