[package]
name = "ip-changed-telegram-message"
description = "Send a Telegram message when the public IP address changes"
version = "0.7.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/ip-changed-telegram-message"
authors = ["EdJoPaTo <ip-changed-telegram-message-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
frankenstein = { version = "0.27", default-features = false, features = ["async-http-client"] }
futures = "0.3"
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros"] }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
	["target/release/ip-changed-telegram-message", "/usr/bin/ip-changed-telegram-message", "755"],
	["LICENSE", "/usr/share/licenses/ip-changed-telegram-message/LICENSE", "644"],
	["README.md", "/usr/share/doc/ip-changed-telegram-message/README.md", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/ip-changed-telegram-message", dest = "/usr/bin/ip-changed-telegram-message", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/ip-changed-telegram-message/LICENSE", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/ip-changed-telegram-message/README.md", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/ip-changed-telegram-message.service", mode = "644" },
]
