[package]
name = "ip-changed-telegram-message"
description = "Send a Telegram message when the public IP address changes"
version = "1.0.3"
license = "MIT"
repository = "https://github.com/EdJoPaTo/ip-changed-telegram-message"
authors = ["EdJoPaTo <ip-changed-telegram-message-rust@edjopato.de>"]
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
frankenstein = { version = "0.43", features = ["client-reqwest"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros"] }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
	["target/release/ip-changed-telegram-message", "/usr/bin/", "755"],
	["LICENSE", "/usr/share/licenses/ip-changed-telegram-message/", "644"],
	["README.md", "/usr/share/doc/ip-changed-telegram-message/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/ip-changed-telegram-message", dest = "/usr/bin/", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/ip-changed-telegram-message/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/ip-changed-telegram-message/", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/ip-changed-telegram-message.service", mode = "644" },
]
